Updating docs to use look/feel of other site elements

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -30,11 +30,11 @@ redirect_from:
             </div>
 
             <div class="card__headline">
-              <h3>Install Rails.</h3>
+              <h3>Download Rails</h3>
             </div>
 
             <div class="card__content">
-              <p>Get Ruby on Rails installed and running properly on your system, whether it be Windows, macOS, or Linux.</p>
+              <p>Get Rails installed and set up on your system&mdash;Windows, macOS, or Linux.</p>
             </div>
           </div>
         </a>
@@ -44,15 +44,15 @@ redirect_from:
         <a href="https://guides.rubyonrails.org/getting_started.html#hello-rails-bang" title="The Rails Tutorial">
           <div class="card__body">
             <div class="card__label">
-              <h6>Tutorial</h6>
+              <h6>Education</h6>
             </div>
 
             <div class="card__headline">
-              <h3>Drive the tutorial.</h3>
+              <h3>Follow a tutorial</h3>
             </div>
 
             <div class="card__content">
-              <p>From zero to hero, learn the basics of the Ruby on Rails framework and how it enables you to be a better developer.</p>
+              <p>Build an app and learn the basics of Rails with a hands-on, step-by-step tutorial.</p>
             </div>
           </div>
         </a>
@@ -62,15 +62,15 @@ redirect_from:
         <a href="https://guides.rubyonrails.org/" title="The Ruby on Rails Guides">
           <div class="card__body">
             <div class="card__label">
-              <h6>Guides</h6>
+              <h6>Level Up</h6>
             </div>
 
             <div class="card__headline">
-              <h3>Read the guides.</h3>
+              <h3>Read the guides</h3>
             </div>
 
             <div class="card__content">
-              <p>The Rails Guides cover all facets of the Rails ecosystem, including the primary gems (libraries) and functionalities that are available out of the box.</p>
+              <p>Explore in-depth guides covering essential Rails features and built-in libraries.</p>
             </div>
           </div>
         </a>
@@ -82,11 +82,11 @@ redirect_from:
         <a href="https://api.rubyonrails.org/" title="The API Documentation">
           <div class="card__body">
             <div class="card__label">
-              <h6>API</h6>
+              <h6>Reference</h6>
             </div>
 
             <div class="card__headline">
-              <h3>The API Documentation.</h3>
+              <h3>The API Documentation</h3>
             </div>
 
             <div class="card__content">
@@ -100,15 +100,15 @@ redirect_from:
         <a href="https://discuss.rubyonrails.org/" title="The Rails Forum">
           <div class="card__body">
             <div class="card__label">
-              <h6>Forum</h6>
+              <h6>Discussion</h6>
             </div>
 
             <div class="card__headline">
-              <h3>Talk in the forum.</h3>
+              <h3>Join the conversation</h3>
             </div>
 
             <div class="card__content">
-              <p>Join the conversation and ask for help on the Rails Forum.</p>
+              <p>Chat, share ideas, and ask for help on the Rails Forum.</p>
             </div>
           </div>
         </a>
@@ -118,15 +118,15 @@ redirect_from:
         <a href="https://github.com/rails/rails" title="Contribute to Rails">
           <div class="card__body">
             <div class="card__label">
-              <h6>Contribute</h6>
+              <h6>Get Involved</h6>
             </div>
 
             <div class="card__headline">
-              <h3>Contribute to Rails.</h3>
+              <h3>Contribute to Rails</h3>
             </div>
 
             <div class="card__content">
-              <p>Rails is open-source, and that means anyone can contribute. Visit GitHub to see the code & learn more.</p>
+              <p>Report issues, review code, or submit updates to the open source Rails project.</p>
             </div>
           </div>
         </a>
