--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@ id: home
 <div class="video common-background--grey common-shape--top-white-down-left">
   <div class="container">
     <div class="video__embed">
-      <video poster="/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080" controls>
-        <source src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails.mp4" type="video/mp4">
-        <track kind="captions" label="English" src="/assets/videos/rails7-screencast-english.vtt" srclang="en" default="false">
-      </video>
+      <video poster="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.webp" src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.mp4" width="1920" height="1080" controls></video>
     </div>
   </div>
 </div>
