Add demo video caption track

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ id: home
 <div class="video common-background--grey common-shape--top-white-down-left">
   <div class="container">
     <div class="video__embed">
-      <video poster="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.webp" src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.mp4" width="1920" height="1080" controls></video>
+      <video poster="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.webp" src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.mp4" width="1920" height="1080" preload="metadata" controls crossorigin>
+        <track src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo-en.vtt" kind="captions" label="English" srclang="en" default>
+      </video>
     </div>
   </div>
 </div>
