--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -34,7 +34,7 @@ redirect_from:
         <hr class="divider" />
 
         <h3>Our Members.</h3>
-        <p>In alphabetical order, the eight founding Core members of the foundation are: </p>
+        <p>In alphabetical order, the nine Core members of the foundation are: </p>
         <div class="trusted common-padding--bottom-small">
           <div class="container">
             <div class="trusted__blocks">
@@ -71,6 +71,11 @@ redirect_from:
               <div class="trusted__block">
                 <a href="https://shopify.com" aria-label="Shopify">
                   <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
+                </a>
+              </div>
+              <div class="trusted__block">
+                <a href="https://1password.com/" aria-label="1Password">
+                  <img src="/assets/images/logo-1password.svg" alt="1Password" />
                 </a>
               </div>
               <div class="trusted__block">
@@ -128,7 +133,7 @@ redirect_from:
         <hr class="divider" />
 
         <h3>Our Board.</h3>
-        <p>The founding Core members are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
+        <p>The Core member companies are each represented by one employee on the foundation's board, which is then chaired by the creator of Ruby on Rails, David Heinemeier Hansson.</p>
 
         <p>The current board members are:</p>
 
@@ -137,6 +142,7 @@ redirect_from:
           <li><a href="https://www.linkedin.com/in/duncandavidson/">Duncan Davidson</a> (Technical Advisor, Office of the CEO, Shopify)</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
+          <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> (VP, Product, Password)</li>
           <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> (SVP, Engineering, Doximity)</li>
           <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> (Director of Engineering, Intercom)</li>
           <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> (CTO, Fleetio)</li>
@@ -156,9 +162,9 @@ redirect_from:
         <hr class="divider" />
 
         <h3>Our Budget.</h3>
-        <p>In 2022, the eight Core foundation members banded together to generously endow the foundation with $1,000,000 USD in funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement. </p>
+        <p>In 2022, the first eight Core foundation members banded together to generously endow the foundation with $1,000,000 USD in funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement. </p>
 
-        <p>Going forward, each Core member has committed to contributing $50,000/year, with a further $25,000/year contributed from each of the Contributing members.</p>
+        <p>Going forward, each Core member has committed to contributing $75,000/year, with Contributing members donating a further $25,000/year.</p>
 
         <p>With a total budget of $525,000 dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
 
