--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -75,7 +75,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://1password.com/" aria-label="1Password">
-                  <img src="/assets/images/logo-1password.svg" alt="1Password" />
+                  <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding:4px" />
                 </a>
               </div>
               <div class="trusted__block">
@@ -142,7 +142,7 @@ redirect_from:
           <li><a href="https://www.linkedin.com/in/duncandavidson/">Duncan Davidson</a> (Technical Advisor, Office of the CEO, Shopify)</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
-          <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> (VP, Product, Password)</li>
+          <li><a href="https://www.linkedin.com/in/jason-meller-04498230/">Jason Meller</a> (VP, Product, 1Password)</li>
           <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> (SVP, Engineering, Doximity)</li>
           <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> (Director of Engineering, Intercom)</li>
           <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> (CTO, Fleetio)</li>
@@ -166,7 +166,7 @@ redirect_from:
 
         <p>Going forward, each Core member has committed to contributing $75,000/year, with Contributing members donating a further $25,000/year.</p>
 
-        <p>With a total budget of $525,000 dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
+        <p>With this combine budget dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
 
         <h3>Suggestions?</h3>
         <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
