--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -29,7 +29,7 @@ redirect_from:
         <h3>Our Work.</h3>
         <p>The foundation will commission freelancers and firms to work on better written documentation, more compelling screencasts, exciting events, and much more. We've only just gotten started, so more detailed plans are still to follow.</p>
 
-        <p>We will also be administering <a href="/trademarks">the Rails trademarks</a> through an exclusive licensee from the trademark owner.</p>
+        <p>We will also be administering <a href="/trademarks">the Rails trademarks</a> through an exclusive license from the trademark owner.</p>
 
         <hr class="divider" />
 
@@ -75,7 +75,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://1password.com/" aria-label="1Password">
-                  <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding:7px" />
+                  <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding:9px" />
                 </a>
               </div>
               <div class="trusted__block">
@@ -166,7 +166,7 @@ redirect_from:
 
         <p>Going forward, each Core member has committed to contributing $75,000/year, with Contributing members donating a further $25,000/year.</p>
 
-        <p>With this combine budget dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
+        <p>With this combined budget dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
 
         <h3>Suggestions?</h3>
         <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
