--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -73,7 +73,7 @@ redirect_from:
                   <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
                 </a>
               </div>
-              <div style="display: flex; justify-content: center; align-items: center;">
+              <div style="justify-content: center; align-items: center;">
                 <a href="https://1password.com/" aria-label="1Password">
                   <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding:10px" />
                 </a>
