--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -75,7 +75,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://1password.com/" aria-label="1Password">
-                  <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding:10px" />
+                  <img src="/assets/images/logo-1password.svg" alt="1Password" style="padding: 10px; margin: auto;" />
                 </a>
               </div>
               <div class="trusted__block">
@@ -107,7 +107,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://makandra.de/en" aria-label="makandra">
-                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px; margin: auto;" />
+                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" />
                 </a>
               </div>
               <div class="trusted__block">
