--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -150,7 +150,7 @@ redirect_from:
 
         <p>The foundation is always open to new Contributing members. Please apply for membership by writing to <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a> for more details. If your company has been benefiting from Rails over the years, but not sure how it might give back to the ecosystem, now there's a clear and obvious choice.</p>
         
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: center; padding: 20px">
           <a href="https://public.3.basecamp.com/p/7ymKZrwbdPoZhwCzhH2SZkLH" class="common-button common-button--size-medium common-button--color-red" style="color: #FFF"><span>Download the membership deck</span></a>
         </div>
 
