--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -47,7 +47,9 @@ redirect_from:
             </li>
           {% endfor %}
         </ul>
-
+        
+        <p>Stay up to date with all Rails Foundation news <a href="/category/foundation">here</a>.</p>
+        
         <hr class="divider" />
 
         <h3>Our Members.</h3>
