Guides layout for desktop & mobile

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -148,8 +148,10 @@ redirect_from:
 
         <ul class="case-studies">
           <li class="case-study">
-            <div class="corner-ribbon">Coming Soon!</div>
+            <a href="/docs/case-studies/doximity">
+            <!-- <div class="corner-ribbon">Coming Soon!</div> -->
               <img src="/assets/images/logo-doximity.svg" alt="Doximity">
+            </a>
           </li>
         </ul>
 
