Most changes suggested by Amanda above

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -115,7 +115,7 @@ redirect_from:
       </div>
 
       <div class="card">
-        <a href="https://github.com/rails/rails" title="Contribute to Rails">
+        <a href="guides.rubyonrails.org/contributing_to_ruby_on_rails.html" title="Contribute to Rails">
           <div class="card__body">
             <div class="card__label">
               <h6>Get Involved</h6>
@@ -201,11 +201,6 @@ redirect_from:
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="https://airbnb.com" aria-label="Airbnb">
-              <img src="/assets/images/logo-airbnb.svg" alt="Airbnb" />
-            </a>
-          </li>
-          <li class="use-rails__item">
             <a href="https://squareup.com" aria-label="Square">
               <img src="/assets/images/logo-square.svg" alt="Square" />
             </a>
@@ -218,11 +213,6 @@ redirect_from:
           <li class="use-rails__item">
             <a href="https://heroku.com" aria-label="Heroku">
               <img src="/assets/images/logo-heroku.svg" alt="Heroku" />
-            </a>
-          </li>
-          <li class="use-rails__item">
-            <a href="https://coinbase.com" aria-label="Coinbase">
-              <img src="/assets/images/logo-coinbase.svg" alt="Coinbase" />
             </a>
           </li>
           <li class="use-rails__item">
