Adding prospectus to Events page

--- a/world/index.html
+++ b/world/index.html
@@ -32,8 +32,13 @@ permalink:
 
         <h3>Sponsor Rails World.</h3>
         
-        <p>Interested in becoming a sponsor? Please reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>.</p>
+        <p>Interested in becoming a sponsor? Please reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a> or download the sponsorship prospectus below.</p>
 
+        <div class="container" style="display: flex; justify-content: center; padding: 20px">
+          <a href="https://public.3.basecamp.com/p/KZTZxpc6BVtMSH9Vv4PWAMN9" class="common-button common-button--size-medium common-button--color-red" style="color: #FFF"><span>2025 Prospectus</span></a>
+        </div>
+
+        
         <hr class="divider" />
 
         <h3>Previous editions.</h3>
