More permissive trademark policy around using Rails in a name

--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -20,9 +20,9 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <p><strong>“Rails”</strong>, <strong>“Ruby on Rails”</strong>, and the <strong>Rails logo</strong> are registered trademarks of <strong>David Heinemeier Hansson</strong>, but are under exclusive license to <a href="/foundation">The Rails Foundation</a>, which is responsible for administering their use and permission.
+        <p><strong>“Rails”</strong>, <strong>“Ruby on Rails”</strong>, and the <strong>Rails logo</strong> are registered trademarks of <strong>David Heinemeier Hansson</strong>, but are under exclusive license to <a href="/foundation">The Rails Foundation</a>, which is responsible for administering their use and permission.</p>
           
-          You may not use these trademarks in a commercial setting to imply that your product or service is endorsed or associated with Ruby on Rails without permission. You may use these marks to refer to Ruby on Rails in a way where it’s clear that you’re simply referring to the project, not claiming endorsement or association.</p>
+        <p>You may not use these trademarks in a commercial setting to imply that your product or service is endorsed or associated with Ruby on Rails without permission. You may use these marks to refer to Ruby on Rails in a way where it’s clear that you’re simply referring to the project, not claiming endorsement or association.</p>
       </div>
     </div>
   </div>
@@ -37,16 +37,21 @@ redirect_from:
           <li>Including the Ruby on Rails logo on product pages to say “we support Ruby on Rails” (like for hosting).</li>
           <li>Use of the trademarks “Rails” or “Ruby on Rails” in book titles.</li>
         </ul>
+
         <h6>Examples of use that do need permission:</h6>
         <ul>
           <li>Selling merchandise (stickers, t-shirts, mugs, etc).</li>
           <li>Use of the Rails logo on a book cover.</li>
           <li>Products like the <a href="https://web.archive.org/web/20151116162843/http://www.goldieblox.com/products/ruby-rails-skydive-action-figure">Ruby Rails</a> doll.</li>
         </ul>
+
         <h6>Examples of use that will not get permission:</h6>
         <ul>
-          <li>Naming your company or product after Ruby on Rails, like “The Rails Consultants” or “The Rails Web Server”.</li>
+          <li>Naming your company or product after Ruby on Rails, like “The Rails Consultants" or “The Rails Web Server”.</li>
         </ul>
+
+        <p>Note: You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to inlude the following disclaimer at the bottom of your primary homepage for the project: "The Rails trademarks are the intellectual property of David Heinemeier Hanson, and exclusively licensed to the Rails Foundation. Uses of ‘Rails’ and ‘Ruby on Rails’ in this website are for identification purposes only and do not imply an endorsement by or affiliation with Rails, the trademark owner, or the Rails Foundation."</p>
+
         <p>You can request permission by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
       </div>
     </div>
