--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -52,7 +52,7 @@ redirect_from:
 
         <p>Note: You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to inlude the following disclaimer at the bottom of your primary homepage for the project: "The Rails trademarks are the intellectual property of David Heinemeier Hanson, and exclusively licensed to the Rails Foundation. Uses of ‘Rails’ and ‘Ruby on Rails’ in this website are for identification purposes only and do not imply an endorsement by or affiliation with Rails, the trademark owner, or the Rails Foundation."</p>
 
-        <p>You can request permission by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
+        <p>You can request permission, when such is due under this policy, by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
       </div>
     </div>
   </div>
