--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -45,13 +45,11 @@ redirect_from:
           <li>Products like the <a href="https://web.archive.org/web/20151116162843/http://www.goldieblox.com/products/ruby-rails-skydive-action-figure">Ruby Rails</a> doll.</li>
         </ul>
 
-        <h6>Examples of use that will not get permission:</h6>
-        <ul>
-          <li>Naming your company or product after Ruby on Rails, like “The Rails Consultants" or “The Rails Web Server”.</li>
-        </ul>
+        <h6>Using Rails in a project name</h6>
+        <p>You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to inlude the following disclaimer at the bottom of your primary homepage for the project:</p>
+        <blockquote>The Rails trademarks are the intellectual property of David Heinemeier Hanson, and exclusively licensed to the Rails Foundation. Uses of ‘Rails’ and ‘Ruby on Rails’ in this website are for identification purposes only and do not imply an endorsement by or affiliation with Rails, the trademark owner, or the Rails Foundation.</blockquote>
 
-        <p>Note: You may use the word “Rails” as part of the name of your project when this does not directly imply endorsement or association, like having a community site called “The Rails Shack”, but then you have to inlude the following disclaimer at the bottom of your primary homepage for the project: "The Rails trademarks are the intellectual property of David Heinemeier Hanson, and exclusively licensed to the Rails Foundation. Uses of ‘Rails’ and ‘Ruby on Rails’ in this website are for identification purposes only and do not imply an endorsement by or affiliation with Rails, the trademark owner, or the Rails Foundation."</p>
-
+        <h6>Getting permission</h6>
         <p>You can request permission, when such is due under this policy, by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
       </div>
     </div>
