Update foundation.html with Gusto logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -125,6 +125,11 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://gusto.com/" aria-label="Gustoa">
+                  <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://makandra.de/en" aria-label="makandra">
                   <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" />
                 </a>
