--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -87,8 +87,8 @@ redirect_from:
 
         <p>Scaling an application to handle a sudden surge in traffic is a challenging
           task, especially under tight deadlines, but Doximity's engineering team
-          faced the urgent task of scaling Dialer and adding this new feature *in just 
-         a few weeks*.</p>
+          faced the urgent task of scaling Dialer and adding this new feature <i>in just 
+         a few weeks</i>.</p>
 
         <p>Doximity grew the Dialer-focused team from 3 engineers to 16, all working in parallel on 
           scaling their Telehealth product while maintaining a great user experience. Because of 
@@ -97,7 +97,7 @@ redirect_from:
           <blockquote class="inline-quote float-left">
             "During peak times, <b>every 10 minutes of downtime</b> could mean an <b>entire month of missed patient care</b> for a single doctor."
   
-            <cite>&mdash; <b>Jordan Hiltunen</b>, eEad Software Engineer</cite>
+            <cite>&mdash; <b>Jordan Hiltunen</b>, Lead Software Engineer</cite>
           </blockquote>
 
         <p>Tools like Rails' Active Job helped handle background tasks, keeping the
@@ -224,7 +224,7 @@ redirect_from:
     <div class="text__body">
       <div class="text__content common-content">
         <p>
-          Experience the power Rails can bring to your engineering efforts firsthand. Download Rails and see how you can take your idea from Startup to IPO.
+          Download Rails and see how you can take your idea from Startup to IPO.
         </p>
 
         <a class="button" href="https://guides.rubyonrails.org/getting_started.html#creating-a-new-rails-project-installing-rails" aria-label="Download Rails" target="_blank">Download Rails</a>
