Update links on doximity.html

--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -141,7 +141,7 @@ redirect_from:
           
         <p>As Doximity's systems evolved, Rails' polymorphism features helped the team adapt their data models without large-scale rewrites. For instance, the Doximity Dialer initially supported only legacy PSTN calls. To improve resiliency, the team introduced support for VoIP calls by creating distinct models (PSTNCall and VOIPCall) that dynamically routed traffic based on network conditions and outages. This incremental evolution, enabled by Rails' robust ORM ActiveRecord, avoided disruption while supporting growing complexity.</p>
           
-        <p>The combination of these Rails tools and features allowed Doximity to scale rapidly while remaining agile and flexible. From a simple video client prototype to becoming a leading telehealth provider, Rails proved its reliability in mission-critical applications and supported Doximity's successful response to an unprecedented global health crisis. Since then, Dialer has earned the Best in KLAS Award three years in a row for excellence in telehealth communication.</p>
+        <p>The combination of these Rails tools and features allowed Doximity to scale rapidly while remaining agile and flexible. From a simple video client prototype to becoming a leading telehealth provider, Rails proved its reliability in mission-critical applications and supported Doximity's successful response to an unprecedented global health crisis. Since then, Dialer has earned the <a href="https://klasresearch.com/vendor-ratings/doximity/80033">Best in KLAS Award</a> three years in a row for excellence in telehealth communication.</p>
 
       </div>
     </div>
@@ -187,7 +187,7 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <p>Rails continues to allow Doximity's developers to experiment, build fast, and maintain high-quality code. And their engineers are not just using Rails - they're giving back. Doximity has open-sourced over 20 tools, like Funneler, a gem for managing user workflows, and Rake UI, a Rails engine for running rake tasks via a user-friendly interface.</p>
+        <p>Rails continues to allow Doximity's developers to experiment, build fast, and maintain high-quality code. And their engineers are not just using Rails - they're giving back. Doximity has open-sourced over 20 tools, like <a href="https://github.com/doximity/funneler">Funneler</a>, a gem for managing user workflows, and <a href="https://github.com/doximity/rake-ui">Rake UI</a>, a Rails engine for running rake tasks via a user-friendly interface.</p>
 
         <p>Rails' combination of productivity, flexibility, and scalability has helped Doximity grow into the largest digital platform for U.S. medical professionals. For developers, their journey also highlights a simple truth: with the right foundation, you can scale fast, iterate quickly, and deliver meaningful results - all without unnecessary complexity.</p>
       </div>
@@ -224,10 +224,10 @@ redirect_from:
     <div class="text__body">
       <div class="text__content common-content">
         <p>
-          Download Rails and see how you can take your idea from Startup to IPO.
+          Download Rails and take your idea from Startup to IPO.
         </p>
 
-        <a class="button" href="https://guides.rubyonrails.org/getting_started.html#creating-a-new-rails-project-installing-rails" aria-label="Download Rails" target="_blank">Download Rails</a>
+        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Download Rails" target="_blank">Download Rails</a>
 
         <p class="notes">This case study was written in collaboration with members of Doximity's engineering leadership.</p>
       </div>
