--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -240,26 +240,26 @@ redirect_from:
               <img src="/assets/images/logo-lime.svg" alt="Lime" />
             </a>
           </li>
-          <div class="use-rails__item">
+          <li class="use-rails__item">
             <a href="https://zendesk.com" aria-label="Zendesk">
             <img src="/assets/images/logo-zendesk.svg" alt="Zendesk" />
           </a>
-          </div>
-          <div class="use-rails__item">
+          </li>
+          <li class="use-rails__item">
             <a href="https://coinbase.com" aria-label="Coinbase">
             <img src="/assets/images/logo-coinbase.svg" alt="Coinbase" />
             </a>
-          </div>
-          <div class="use-rails__item">
+          </li>
+          <li class="use-rails__item">
             <a href="https://www.procore.com" aria-label="Procore">
             <img src="/assets/images/logo-procore.svg" alt="Procore" />
           </a>
-          </div>
-          <div class="use-rails__item">
+          </li>
+          <li class="use-rails__item">
             <a href="https://www.appsignal.com/" aria-label="AppSignal">
             <img src="/assets/images/logo-appsignal.svg" alt="AppSignal" />
             </a>
-          </div>
+          </li>
         </ul>
 
 
