Update header on doximity.html

--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -133,7 +133,7 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <h2>Scaling Fast Under Pressure</h2>
+        <h2>Leveraging the Rails Toolbox</h2>
         
         <p>One of the factors contributing to Doximity's success has been Ruby's widespread adoption in the developer community. Most third-party vendors provide SDKs for Ruby, making integrations easy and fast. Instead of spending time coding low-level HTTP requests to vendor APIs, Doximity's team could focus on building meaningful features for their users.</p>
 
