--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Doximity Case Study
-description:
+title: Doximity Case Study - Fast, Flexible, and Scalable
+description: Read how Rails has helped Doximity grow into the largest digital platform for U.S. medical professionals. 
+og_image: assets/images/case-study-doximity.png
 permalink: /docs/case-studies/doximity
 redirect_from:
   - /docs/case-studies/doximity/
