Update doximity.html with Diximity link

--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -24,7 +24,7 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <p><b>Doximity set out to help doctors save time and focus on what matters most: their patients.</b> Over the past 15 years, they've built tools for communication, workflow, and telehealth that are now trusted by over two million healthcare professionals, including 80% of U.S. doctors. These tools make a real difference in the lives of both physicians and patients.</p>
+        <p><b><a href="https://www.doximity.com/">Doximity</a> set out to help doctors save time and focus on what matters most: their patients.</b> Over the past 15 years, they've built tools for communication, workflow, and telehealth that are now trusted by over two million healthcare professionals, including 80% of U.S. doctors. These tools make a real difference in the lives of both physicians and patients.</p>
 
         <p>But like many startups, Doximity began with a small team and a big challenge: how to build something fast enough to find its footing in the market.</p>
       </div>
