--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -241,8 +241,8 @@ redirect_from:
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="https://zendesk.com" aria-label="Zendesk">
-            <img src="/assets/images/logo-zendesk.svg" alt="Zendesk" />
+            <a href="https://www.freeagent.com/" aria-label="FreeAgent">
+            <img src="/assets/images/logo-freeagent.svg" alt="FreeAgent" />
           </a>
           </li>
           <li class="use-rails__item">
