--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@ id: home
           <img src="/assets/images/logo-lime.svg" alt="Lime" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://www.freeagent.com/" aria-label="FreeAgent">
+          <img src="/assets/images/logo-freeagent.svg" alt="FreeAgent" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
