Improving CTA under case study

--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -224,10 +224,10 @@ redirect_from:
     <div class="text__body">
       <div class="text__content common-content">
         <p>
-          Download Rails and take your idea from Startup to IPO.
+          Download Rails to try it out yourself and see how you can take your idea from Startup to IPO.
         </p>
 
-        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Download Rails" target="_blank">Download Rails</a>
+        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Rails Installation Guide" target="_blank">Download Rails</a>
 
         <p class="notes">This case study was written in collaboration with members of Doximity's engineering leadership.</p>
       </div>
