Fixed one sentence in case study

--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -163,7 +163,7 @@ redirect_from:
       <div class="text__content common-content">
         <h2>Sticking with What Works</h2>
         
-        <p>Fifteen years later, Doximity's original Rails app is still going strong. Updated from Rails 2.3.5, their monolith now runs on Rails 7. After over 30,000 commits from hundreds of contributors, it still powers Doximity.com for over 80% of all doctors, 90% of medical students, and 60% of nurse practitioners and physician assistants. Moreover, as of March 31, 2024, 17 of the top 20 hospitals use Doximity's enterprise IT platforms.</p>
+        <p>Fifteen years later, Doximity's original Rails app is still going strong. Updated from Rails 2.3.5, their monolith now runs on Rails 7. After over 30,000 commits from hundreds of contributors, it still powers Doximity.com for over 80% of all doctors, 90% of graduating medical students, and 60% of nurse practitioners and physician assistants. Moreover, as of March 31, 2024, 17 of the top 20 hospitals use Doximity's enterprise IT platforms.</p>
 
       <p>The decision to stick with Rails for the long haul has allowed the team to avoid costly rewrites and focus on shipping new features quickly.</p>
 
@@ -224,10 +224,10 @@ redirect_from:
     <div class="text__body">
       <div class="text__content common-content">
         <p>
-          Download Rails to try it out yourself and see how you can take your idea from Startup to IPO.
+          Try Rails out yourself and see how you can take your idea from Startup to IPO.
         </p>
 
-        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Rails Installation Guide" target="_blank">Rails Installation Guide</a>
+        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Rails Installation Guide" target="_blank">Get Started Here</a>
 
         <p class="notes">This case study was written in collaboration with members of Doximity's engineering leadership.</p>
       </div>
