--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -176,7 +176,7 @@ redirect_from:
   <div class="container">
     <div class="casestudy__floater casestudy__quote no_image">
       <blockquote>
-        &ldquo;Instead of chasing the latest shiny tools, Doximity has kept a laser focus on shipping new features and adapting to doctors' needs, thanks to the rock-solid foundation Rails provides. It gives us the stability to do that without getting bogged down in unnecessary churn.&rdquo;
+        &ldquo;Instead of chasing the latest shiny tools, Doximity has kept a laser focus on shipping new features and adapting to doctors' needs. Rails provides a rock-solid foundation and stability to do that without getting bogged down in unnecessary churn.&rdquo;
         <cite> &mdash; <b>Bruno Miranda</b>, <br>SVP Engineering</cite>
       </blockquote>
     </div>
