--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -23,7 +23,7 @@ redirect_from:
     <h2 class="thin">Get Started</h2>
     <div class="cards__container">
       <div class="card">
-        <a href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" title="Install Ruby on Rails">
+        <a href="https://guides.rubyonrails.org/install_ruby_on_rails.html" title="Install Ruby on Rails">
           <div class="card__body">
             <div class="card__label">
               <h6>Installation</h6>
@@ -41,7 +41,7 @@ redirect_from:
       </div>
 
       <div class="card">
-        <a href="https://edgeguides.rubyonrails.org/getting_started.html" title="The Rails Tutorial">
+        <a href="https://guides.rubyonrails.org/getting_started.html" title="The Rails Tutorial">
           <div class="card__body">
             <div class="card__label">
               <h6>Education</h6>
