--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -227,7 +227,7 @@ redirect_from:
           Try Rails out yourself and see how you can take your idea from Startup to IPO.
         </p>
 
-        <a class="button" href="https://edgeguides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Rails Installation Guide" target="_blank">Get Started Here</a>
+        <a class="button" href="https://guides.rubyonrails.org/install_ruby_on_rails.html" aria-label="Rails Installation Guide" target="_blank">Get Started Here</a>
 
         <p class="notes">This case study was written in collaboration with members of Doximity's engineering leadership.</p>
       </div>
